--- a/legal-ai-frontend/package.json
+++ b/legal-ai-frontend/package.json
@@ -12,6 +12,7 @@
     "@heroicons/react": "^1.0.6",
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
+    "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "heroicons": "^2.1.5",
