--- a/legal-ai-frontend/package.json
+++ b/legal-ai-frontend/package.json
@@ -17,6 +17,7 @@
     "clsx": "^2.1.1",
     "heroicons": "^2.1.5",
     "lucide-react": "^0.436.0",
+    "marked": "^14.1.0",
     "next": "14.2.6",
     "react": "^18",
     "react-dom": "^18",
